# VegaExpress.Orchestration.Services

./: LICENSE  README.md  VegaExpress.Agent.sln  VegaExpress.Discovery.sln
License/: Liiksoft Corporation Inc -License.txt
VegaExpress.Agent/: Program.cs  RouterBase.cs  VegaExpress.Agent.csproj  Worker.cs  appsettings.json
VegaExpress.Agent.Tests/: UnitTest1.cs  VegaExpress.Agent.Tests.csproj
VegaExpress.Agent/Constants/: Styles.cs
VegaExpress.Agent/Controls/: GridView.cs  ListView.cs
VegaExpress.Agent/Converters/: IntToUStringConverter.cs
VegaExpress.Agent/Extentions/: ExpressionExtention.cs  GuidExtention.cs  PathExtention.cs  QueueExtensions.cs
VegaExpress.Agent/Properties/: Resources.Designer.cs  Resources.resx  launchSettings.json
VegaExpress.Agent/Services/: LoadBalancer.cs  ServiceManagement.cs  StorageService.cs
VegaExpress.Agent/Shared/: GlobalData.cs  LocalMessageBuffer.cs  LocalMessaging.cs  NotificationQueue.cs
VegaExpress.Agent/Shell/: PShell.cs  PShellResult.cs
VegaExpress.Agent/Utilities/: ConsoleScheduler.cs  LoggerView.cs  Routable.cs  RouteState.cs  Router.cs  TerminalService.cs
VegaExpress.Agent/ViewModels/: MainViewModel.cs  OtherViewModel.cs  WelcomeViewModel.cs
VegaExpress.Agent/Views/: MainView.cs  WelcomeView.cs
VegaExpress.Data/: Script.sql  Services.db
VegaExpress.Discovery/: Program.cs  VegaExpress.Discovery.csproj  Worker.cs  appsettings.json
VegaExpress.Discovery/Properties/: launchSettings.json
VegaExpress.Discovery/Services/: HealthCheckService.cs
VegaExpress.Gateway/: Program.cs  VegaExpress.Gateway.csproj  WeatherForecast.cs
VegaExpress.Gateway/Controllers/: WeatherForecastController.cs
VegaExpress.Gateway/Enums/: Types.cs
VegaExpress.Gateway/Extentions/: WebApplicationExtention.cs
VegaExpress.Gateway/Middlewares/: ProxyMiddleware.cs  RedirectMiddleware.cs
VegaExpress.Gateway/Properties/: AssemblyInfo.cs  launchSettings.json
VegaExpress.Gateway/Services/: AgentBindService.cs
VegaExpress.Proxy/: LICENSE  VegaExpressProxy.cabal  doc.md
VegaExpress.Proxy/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
VegaExpress.Proxy/res/win/: Pre.bat  Run.bat  VegaExpressProxy.rc
VegaExpress.Proxy/src/: Main.hs
VegaExpress.Shared/: IMessageQueueService.cs
VegaExpress.Shared/Extentions/: ServerCallContextExtention.cs
VegaExpress.Shared/Protos/: BindService.proto  CqService.proto  Example.proto  FileService.proto  HealthCheckService.proto  LoadBalancingService.proto  MessageQueueService.proto  ProcessShedulerService.proto  ProcessThreadService.proto  RegistrationService.proto  Shared.proto  StorageService.proto  WorkerService.proto
VegaExpress.Shared/Services/: BindService.cs  MessageQueueService.cs
VegaExpress.Shared/Utilities/: ProcessThreadLister.cs
VegaExpress.Worker/: Program.cs  VegaExpress.Worker.csproj  appsettings.json
VegaExpress.Worker.Client/: Program.cs  VegaExpress.Worker.Client.csproj  Worker.cs  appsettings.json
VegaExpress.Worker.Client/Controllers/: FileController.cs  MetaController.cs  StorageController.cs
VegaExpress.Worker.Client/Extentions/: ConfigureContainer.cs
VegaExpress.Worker.Client/Properties/: launchSettings.json
VegaExpress.Worker.Client/Services/: StorageService.cs
VegaExpress.Worker.Core/: VegaExpress.Worker.Core.csproj
VegaExpress.Worker.Core/Base/: CommandDefinition.cs  CommandFlags.cs  CustomPropertyTypeMap.cs  DataTableHandler.cs  DbString.cs  DefaultTypeMap.cs  DynamicParameters.CachedOutputSetters.cs  DynamicParameters.ParamInfo.cs  (+40 more)
(+139 files in other folders)
